-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.9.6
-
None
-
-
ca4334bc9 (dev), b5ba125fa (6.9), 5c36926f6 (6.8)
When a menu item have a digit as mnemonic ( like "&1 - c:
filename.tmp" e.g. in recent-files-submenu) then the action is not triggered with the digit if it is entered on the numeric key-pad.
After reading the code in qmenu.cpp it is obvious why nothing happens, because the QKeyEvent has the modifier Qt::KeypadModifier, so the if-condition doesn't match.
It would be easy to add these keys to be handled, but i'm wondering, if there is a special reason to exclude all keys on the keypad to act as menu-item mnemonic?
For Gerrit Dashboard: QTBUG-73390 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
611036,4 | QMenu: Accept accelerators typed on keypad | dev | qt/qtbase | Status: MERGED | +2 | 0 |
611635,2 | QMenu: Accept accelerators typed on keypad | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
611681,2 | QMenu: Accept accelerators typed on keypad | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |